<resources>
    <string name="app_name">IQRA B.Ed Library</string>
    <string name="heading">Iqra College of Education</string>
    <string name="teachers">Teachers</string>
    <string name="students">Students</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1"><b>Teachers</b></string>
    <string name="tab_text_2"><b>Students</b></string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="teacher_radio">Teacher</string>
    <string name="student_radio">Student</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="export_as_excel">Export as Excel</string>
    <string name="clear_all_history">Clear All History</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
    <string-array name="batch_year_list">
        <item>2020&#8211;2021</item>
        <item>2021&#8211;2022</item>
        <item>2022&#8211;2023</item>
        <item>2023&#8211;2024</item>
        <item>2024&#8211;2025</item>
        <item>2025&#8211;2026</item>
        <item>2026&#8211;2027</item>
    </string-array>
</resources>