<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FormActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        style="@style/Salaries.TextInputLayoutStyle"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintEnd_toEndOf="@id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:hint="@string/name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/roll_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        style="@style/Salaries.TextInputLayoutStyle"
        app:layout_constraintTop_toBottomOf="@id/name_layout"
        app:layout_constraintStart_toStartOf="@id/name_layout"
        app:layout_constraintEnd_toEndOf="@id/name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_roll_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:hint="Roll Number"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:prefixText="+91 "
        app:prefixTextColor="@color/colorPrimary"
        android:layout_marginHorizontal="20dp"
        style="@style/Salaries.TextInputLayoutStyle"
        app:layout_constraintTop_toBottomOf="@id/roll_layout"
        app:layout_constraintStart_toStartOf="@id/roll_layout"
        app:layout_constraintEnd_toEndOf="@id/roll_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:hint="Mobile Number"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/batch_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="8dp"
        android:popupBackground="@color/colorPrimaryLight"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/mobile_layout"
        app:layout_constraintStart_toStartOf="@id/mobile_layout"
        app:layout_constraintEnd_toEndOf="@id/mobile_layout"
        android:spinnerMode="dropdown"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:textAppearance="@style/textAppearanceButton"
        android:text="@string/add"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/batch_spinner"
        app:layout_constraintStart_toStartOf="@id/batch_spinner"
        app:layout_constraintEnd_toEndOf="@id/batch_spinner"/>

</androidx.constraintlayout.widget.ConstraintLayout>